# qml_notion_HW

./: CMakeLists.txt  DocumentList.qml  README.md  notion_v2.qmlproject  qmlmodules
content/: App.qml  CMakeLists.txt  DocChooserView.qml  DocToChooseDelegate.qml  DocView.qml  DocsMenu.qml  DocsTree.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/notion_v2/: CMakeLists.txt  qmldir
imports/notion_v2/designer/: plugin.metainfo
src/: documentsmodel.cpp  documentsmodel.h  import_qml_plugins.h  main.cpp
